--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,11 +1,18 @@
+<!-- Main container for footer content -->
 <div class="content-container">
-    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-    <a href="#"><i class="fa-brands fa-youtube"></i></a>
-    <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+    <!-- Social media links section -->
+    <!-- Each link uses Font Awesome icons for social media platforms -->
+    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>   <!-- Facebook link -->
+    <a href="#"><i class="fa-brands fa-twitter"></i></a>           <!-- Twitter link -->
+    <a href="#"><i class="fa-brands fa-instagram"></i></a>         <!-- Instagram link -->
+    <a href="#"><i class="fa-brands fa-youtube"></i></a>           <!-- YouTube link -->
+    <a href="#"><i class="fa-brands fa-pinterest"></i></a>         <!-- Pinterest link -->
+
+    <!-- Copyright and company information text in Portuguese -->
     <p>
-        O conteúdo deste site está protegido por copyright e é propriedade da H & M Hennes & Mauritz AB. O conceito de negócio da H&M é a oferta de moda e qualidade aos melhores preços, de forma sustentável. Desde que foi fundada, em 1947, a H&M tornou-se uma das maiores empresas de moda do mundo.
+        O conteúdo deste site está protegido por copyright e é propriedade da H & M Hennes & Mauritz AB. 
+        O conceito de negócio da H&M é a oferta de moda e qualidade aos melhores preços, de forma sustentável. 
+        Desde que foi fundada, em 1947, a H&M tornou-se uma das maiores empresas de moda do mundo.
     </p>
 </div>
 
